# Molecular-Integrals

./: CMakeLists.txt  LICENSE  README.md
src/: Basis.cpp  Basis.h  BoysFunction.cpp  BoysFunction.h  Coefficients.cpp  Coefficients.h  Geometry.cpp  Geometry.h  MatElements.cpp  MatElements.h  McMurchie.cpp  McMurchie.h  RysDupuisKing.cpp  RysDupuisKing.h  boyscheck.h  main.cpp  readDataFiles.cpp  readDataFiles.h  tryBoys.cpp
